test fixes after resolving master conflicts